[tool.poetry]
name = "kaliningradapi"
version = "0.1.0"
description = ""
authors = ["Fizinftop99 <naumov_nik99@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
pydantic = "^2.7.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pyjwt = "^2.8.0"
torchvision = "^0.18.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
sqlalchemy = "^2.0.30"
databases = "^0.9.0"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
